--- a/remove_wap.yml
+++ b/remove_wap.yml
@@ -23,6 +23,22 @@
       file:
         path: /etc/hostapd/hostapd.conf
         state: absent
+        
+    - name: Remove DHCP server configuration lines
+      replace:
+        path: /etc/dhcp/dhcpd.conf
+        regexp: "{{ item }}"
+        replace: ""
+      loop:
+        - "subnet 192.168.1.0 netmask 255.255.255.0 {"
+        - "  range 192.168.1.10 192.168.1.50;"
+        - "  option broadcast-address 192.168.1.255;"
+        - "  option routers 192.168.1.1;"
+        - "  default-lease-time 600;"
+        - "  max-lease-time 7200;"
+        - "  option domain-name 'local';"
+        - "  option domain-name-servers 8.8.8.8, 8.8.4.4;"
+        - "}"
 
     - name: Remove WAP configuration from network interfaces
       replace:
