--- a/remove_wap.yml
+++ b/remove_wap.yml
@@ -27,17 +27,8 @@
     - name: Remove DHCP server configuration lines
       replace:
         path: /etc/dhcp/dhcpd.conf
-        regexp: "{{ item }}"
+        regexp: "(?s)^subnet 192.168.1.0 netmask 255.255.255.0 \{.*?\}\n*"
         replace: ""
-      loop:
-        - "^subnet 192.168.1.0 netmask 255.255.255.0 {.*?}$"
-        - "^  range 192.168.1.10 192.168.1.50;.*?}$"
-        - "^  option broadcast-address 192.168.1.255;.*?}$"
-        - "^  option routers 192.168.1.1;.*?}$"
-        - "^  default-lease-time 600;.*?}$"
-        - "^  max-lease-time 7200;.*?}$"
-        - "^  option domain-name 'local';.*?}$"
-        - "^  option domain-name-servers 8.8.8.8, 8.8.4.4;.*?}$"
 
     - name: Remove WAP configuration from network interfaces
       replace:
