--- a/remove_wap.yml
+++ b/remove_wap.yml
@@ -24,11 +24,27 @@
         path: /etc/hostapd/hostapd.conf
         state: absent
         
-    - name: Remove DHCP server configuration lines
+    - name: Remove DHCP configuration
+      lineinfile:
+        path: /etc/dhcp/dhcpd.conf
+        line: "{{ item }}"
+        state: absent
+      loop:
+        - "subnet 192.168.1.0 netmask 255.255.255.0 {"
+        - "  range 192.168.1.10 192.168.1.50;"
+        - "  option broadcast-address 192.168.1.255;"
+        - "  option routers 192.168.1.1;"
+        - "  default-lease-time 600;"
+        - "  max-lease-time 7200;"
+        - "  option domain-name 'local';"
+        - "  option domain-name-servers 8.8.8.8, 8.8.4.4;"
+        - "}"
+        
+    - name: Remove extra blank lines
       replace:
         path: /etc/dhcp/dhcpd.conf
-        regexp: "^subnet 192.168.1.0 netmask 255.255.255.0 \{.*?\}$|^  range 192.168.1.10 192.168.1.50;.*?\}$|^  option broadcast-address 192.168.1.255;.*?\}$|^  option routers 192.168.1.1;.*?\}$|^  default-lease-time 600;.*?\}$|^  max-lease-time 7200;.*?\}$|^  option domain-name 'local';.*?\}$|^  option domain-name-servers 8.8.8.8, 8.8.4.4;.*?\}$|^.*$"
-        replace: ""
+        regexp: '^\s*$'
+        replace: ''    
 
     - name: Remove WAP configuration from network interfaces
       replace:
