--- a/setup_wap.yml
+++ b/setup_wap.yml
@@ -25,7 +25,7 @@
         - "  option routers 192.168.1.1;"
         - "  default-lease-time 600;"
         - "  max-lease-time 7200;"
-        - "  option domain-name 'local';"
+        - "  option domain-name \"local\";"
         - "  option domain-name-servers 8.8.8.8, 8.8.4.4;"
         - "}"
         
