--- a/setup_wap.yml
+++ b/setup_wap.yml
@@ -97,6 +97,7 @@
             macaddr_acl=0
             auth_algs=1
             ignore_broadcast_ssid=0
+            wpa=0
 
     - name: Update hostapd configuration file path
       lineinfile:
