--- a/setup_wap.yml
+++ b/setup_wap.yml
@@ -79,9 +79,9 @@
         name: networking
         state: restarted
       
-    - name: Remove existing IP configuration from wlan0
-      command: ip address flush dev wlan0
-      ignore_errors: yes
+    # - name: Remove existing IP configuration from wlan0
+    #   command: ip address flush dev wlan0
+    #   ignore_errors: yes
 
     - name: Set static IP address
       command: ip address add 192.168.1.1/24 broadcast 192.168.1.255 dev wlan0
