--- a/setup_wap.yml
+++ b/setup_wap.yml
@@ -43,7 +43,7 @@
 
     - name: Remove DHCP PID file
       file:
-        path: /var/run/dhcp.pid
+        path: /var/run/dhcpd.pid
         state: absent
       when: dhcp_process.stdout is defined
       ignore_errors: yes
@@ -97,7 +97,11 @@
             macaddr_acl=0
             auth_algs=1
             ignore_broadcast_ssid=0
-            wpa=0
+            wpa=2
+            wpa_passphrase=keepixkeepix1234
+            wpa_key_mgmt=WPA-PSK
+            wpa_pairwise=TKIP
+            rsn_pairwise=CCMP
 
     - name: Update hostapd configuration file path
       lineinfile:
